--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -1,35 +1,34 @@
 /* ### INHALT ### */
 
 main {
-color: #ebebd3;
-padding-top: 1rem;
-padding-bottom: 6rem;
-font-family: Verdana, Arial, Helvetica, sans-serif;
+    color: #ebebd3;
+    padding-top: 1rem;
+    padding-bottom: 6rem;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
 }
-.grid-container { /* components */
-display: grid;
-gap: 1rem;
-grid-auto-columns: 1fr;
-grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-grid-template-areas: 'one' 'two' 'three' 'four' 'five';
-padding-block: 1rem;
-width: min(97%, 70rem);
-margin-inline: auto;
-justify-content: space-between;
-
+.grid-container {
+    display: grid;
+    gap: 1rem;
+    grid-auto-columns: 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-areas: 'one' 'two' 'three' 'four' 'five';
+    padding-block: 1rem;
+    width: min(97%, 70rem);
+    margin-inline: auto;
+    justify-content: space-between;
 }
 .content {
-padding: 1rem;
-border-radius: 0.3rem;
-box-shadow:
-rgba(0, 240, 240, 0.4) 0px 2px 4px,
-rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
-rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
-text-shadow: 1.5px 2px black;
-background-color: #131313;
-position: relative;
-align-items: center;
-justify-content: space-around;
+    padding: 1rem;
+    border-radius: 0.3rem;
+    box-shadow:
+        rgba(0, 240, 240, 0.4) 0px 2px 4px,
+        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
+        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+    text-shadow: 1.5px 2px black;
+    background-color: #131313;
+    position: relative;
+    align-items: center;
+    justify-content: space-around;
 }
 .content > h1, h2, h3, h4 {color: #8dd88e;}
 .content:nth-child(1) {grid-area: one;}
@@ -37,76 +36,80 @@ justify-content: space-around;
 .content:nth-child(3) {grid-area: three;}
 .content:nth-child(4) {grid-area: four;}
 .content:nth-child(5) {grid-area: five;}
-.window-content { /* Code-Fenster */
-align-self: flex-start;
-width: auto;
-color: #ebebd3;
-display: inline-block;
-text-decoration: none;
-color: inherit;
-flex-direction: row;
-font-size: 0.65em;
-font-family: 'Source Code Pro', monospace;
-line-height: 1.337em;
-max-width: 640px;
-text-align: left;
-text-shadow: none;
-padding-left: 1em;
-border: 3px solid #133337;
+.window-content { /* Code-Syntax */
+    align-self: flex-start;
+    width: auto;
+    color: #ebebd3;
+    display: inline-block;
+    text-decoration: none;
+    color: inherit;
+    flex-direction: row;
+    font-size: 0.65em;
+    font-family: 'Source Code Pro', monospace;
+    line-height: 1.337em;
+    max-width: 640px;
+    text-align: left;
+    text-shadow: none;
+    padding-left: 1em;
+    border: 3px solid #133337;
 }
 .flow > *:where(:not(:first-child)) {
-margin-top: var(--flow-spacer, 0.6em);
+    margin-top: var(--flow-spacer, 0.6em);
 }
 .flex { /* utilities */
-display: flex;
-gap: var(--gap, 0.6rem);
+    display: flex;
+    gap: var(--gap, 0.6rem);
 }
+
+
+/* ### MISC ### */
+
 .keyboard-button {
-display: inline-block;
-background-color: #333;
-border: 1px solid #000;
-border-radius: 3px;
-box-shadow:
-0 3px 0 rgba(0,0,0,0.25),
-inset 0 2px 0 rgba(170,170,170,0.8);
-color: #fff;
-vertical-align: middle;
-padding-left: 0.6em;
-padding-right: 0.6em;
-outline: none;
-font-size: 0.65rem;
+    display: inline-block;
+    background-color: #333;
+    border: 1px solid #000;
+    border-radius: 3px;
+    box-shadow:
+        0 3px 0 rgba(0,0,0,0.25),
+        inset 0 2px 0 rgba(170,170,170,0.8);
+    color: #fff;
+    vertical-align: middle;
+    padding-left: 0.6em;
+    padding-right: 0.6em;
+    outline: none;
+    font-size: 0.65rem;
 }
 .keyboard-button span {
-font-family: Helvetica, Arial, sans-serif;
-text-shadow: none;
-font-weight: 700;
+    font-family: Helvetica, Arial, sans-serif;
+    text-shadow: none;
+    font-weight: 700;
 }
 .zitat-referenz {font-size:small;}
 footer {
-position: absolute;
-display: block;
-left: 0;
-bottom: 0;
-width: 100%;
-padding: 1rem 0 2rem 0;
-background-color: #131313;
-color: #ffbfea;
-text-align: center;
-text-shadow: 1.5px 2px black;
-font-family: 'Sarpanch', sans-serif;
-font-size: 1.3rem;
-display: flex;
-justify-content: center;
-align-items: center;
-box-shadow:
-rgba(0, 240, 240, 0.4) 0px 2px 4px,
-rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
-rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+    position: absolute;
+    display: block;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 1rem 0 2rem 0;
+    background-color: #131313;
+    color: #ffbfea;
+    text-align: center;
+    text-shadow: 1.5px 2px black;
+    font-family: 'Sarpanch', sans-serif;
+    font-size: 1.3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow:
+        rgba(0, 240, 240, 0.4) 0px 2px 4px,
+        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
+        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
 }
 .email-link {
-font-weight: 200;
-color: #00f0f0;
-text-decoration: none;
-text-align: center;
+    font-weight: 200;
+    color: #00f0f0;
+    text-decoration: none;
+    text-align: center;
 }
 #dl-link {padding: 0.6rem;}
