--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,5 +1,34 @@
-/* ### MENU */
+/* ### ICON */
+.hamburger,.hamburger::before,.hamburger::after {
+     content: "";
+     display: block;
+     background: #00f0f0;
+     height: 3px;
+     width: 1.8em;
+     border-radius: 2px;
+     transition: all ease-in-out 400ms;
+     box-shadow:
+          rgba(0, 240, 240, 0.4) 0px 2px 4px,
+          rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
+          rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+}
+.hamburger::before {
+     transform: translateY(-6px);
+}
+.hamburger::after {
+     transform: translateY(3px);
+}
+[aria-expanded="true"] .hamburger {
+     transform: rotate(45deg);
+}
+[aria-expanded="true"] .hamburger::before {
+     opacity: 0;
+}
+[aria-expanded="true"] .hamburger::after {
+     transform: translateY(-3px) rotate(-90deg);
+}
 
+/* ### MENU */
 button {
     background: #131313;
     border: 1px solid #8dd88e;
@@ -86,7 +115,7 @@ button {
     white-space: nowrap;
     width: 1px;
 }
-#wtf {
+#wtf-is-jumi {
     text-transform: lowercase;
     font-size: smaller;
 }
