--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -1,34 +1,31 @@
+.modal-trigger {
+  border-radius: 3px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
 .modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
 }
+
 .modal-content {
-    max-width: 80%;
-    max-height: 80%;
-    animation: zoom-in 0.5s;
-    z-index: 9999;
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
 }
-@keyframes zoom-in {
-    from {
-    transform: scale(0.8);
-    }
-    to {
-    transform: scale(1);
-    }
+
+dialog:not([open]) {
+  display: none;
 }
-.close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: #fff;
-    font-size: 24px;
-    cursor: pointer;
-}
+
