--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -2,6 +2,12 @@
   border-radius: 3px;
   cursor: pointer;
 }
+[id*="modalTrigger"]:hover {
+  opacity: 0.8;
+  outline: solid;
+  outline-color: #ffbfea;
+  animation: neon .08s ease-in-out infinite alternate;
+}
 
 dialog[open] {
   display: flex;
