--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -67,13 +67,13 @@ button:hover {
 .primary-navigation[data-state="closed"] {
     display: none;
 }
-.site-nav {z-index: 1;}
-.site-nav li {
+.menu {z-index: 1;}
+.menu li {
     border-bottom: 1px solid #575766;
     /*top: 3.3em;*/
 }
-.site-nav li:last-child {border-bottom: none;}
-.site-nav a {
+.menu li:last-child {border-bottom: none;}
+.menu a {
     font-size: 1.3rem;
     color: #8dd88e;
     display: block;
@@ -81,10 +81,10 @@ button:hover {
     text-transform: uppercase;
     text-decoration: none;
 }
-.site-nav a:hover,.site-nav a:focus {
+.menu a:hover,.menu a:focus {
     animation: neon .08s ease-in-out infinite alternate;
 }
-.site-nav--icon {
+.menu-icon {
     display: inline-block;
     margin-right: 1em;
     width: 1.1em;
