Site-Features in Footer, "Shownotes" into <ul>, menu less padding

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -220,6 +220,8 @@ footer {
     margin: 0;
     cursor: pointer;
 }
+#exportIcon {display:none;}
+#instagramIcon {display:none;}
 
 /* # Sonstiges */
 
