--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,4 +1,4 @@
-/* ### ICON */
+/* ICON */
 .hamburger,.hamburger::before,.hamburger::after {
      content: "";
      display: block;
@@ -28,7 +28,7 @@
      transform: translateY(-3px) rotate(-90deg);
 }
 
-/* ### MENU */
+/* MENU */
 button {
     background: #131313;
     border: 1px solid #8dd88e;
@@ -77,7 +77,7 @@ button:hover {
     font-size: 1.3rem;
     color: #8dd88e;
     display: block;
-    padding: 1.3em 4em 1.3em 1.5em;
+    padding: 1.3em 1.1em 1.3em 1.5em;
     text-transform: uppercase;
     text-decoration: none;
 }
@@ -92,7 +92,7 @@ button:hover {
     color: rgba(255, 255, 255, 0.4);
 }
 
-/* ### TOGGLE */
+/* TOGGLE */
 .menu-toggle {
     padding: 1.3em; /*Button-Position*/
     background: transparent;
