Site-Features in Footer, "Shownotes" into <ul>, menu less padding

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,9 +45,9 @@ dd {
 }
 dt {
     font-size: 1.3rem;
- }
+}
 ul > li {
-          -style: none;
+    list-style: none;
 }
 code {
     display: inline-table;
