Themen und Inhalte einfügen/erstellen/zusammenführen

--- a/templates/Cheats.htm
+++ b/templates/Cheats.htm
@@ -60,73 +60,70 @@
 
 <div class="grid-container">
 <article class="content flow">
-  <h2>Themenfeld 1</h2>
-  <ul>
-    <li><b>Kategorie 1</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-    <li><b>Kategorie 2</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  </ul>
+<h1>GTA San Andreas (PS2)</h1>
+<p><strong>Unsterblichkeit</strong>:</p>
+<pre><code>- rechts, oben, X, Dreieck, links, rechts, unten, Kreis
+</code></pre><p><strong>Unendliche Munition</strong>:</p>
+<pre><code>- unten, X, rechts, links, Kreis, oben, unten, viereck
+</code></pre><p><strong>Sechs-Sterne Fahndungslevel</strong>:</p>
+<pre><code>- oben, oben, unten, unten, links, rechts, links, rechts, viereck, Kreis
+</code></pre><p><strong>Supersprung</strong>:</p>
+<pre><code>- links, links, Dreieck, Dreieck, rechts, rechts, links, rechts, viereck, R1, R2
+</code></pre></article>
+<article class="content flow">
+<h1>Tony Hawks Pro Skater 2 (PS2)</h1>
+<table>
+<thead>
+<tr>
+<th>Cheat</th>
+<th>Effekt</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>IAMTOOMUSCULAR</td>
+<td>Bessere Grinds</td>
+</tr>
+<tr>
+<td>NEEDSPEED</td>
+<td>Schnellere Geschwindigkeit</td>
+</tr>
+<tr>
+<td>FLYAWAY</td>
+<td>Unbegrenzte Luft</td>
+</tr>
+<tr>
+<td>IMINTERFACING</td>
+<td>Unbegrenzte Special Meter</td>
+</tr>
+<tr>
+<td>BEESUIT</td>
+<td>Moon Physics</td>
+</tr>
+</tbody>
+</table>
 </article>
 <article class="content flow">
-  <h2>Themenfeld 2</h2>
-  <ul>
-    <li><b>Kategorie 1</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-    <li><b>Kategorie 2</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  </ul>
+<h4>Leuchtkraft</h4>
+<img src="content/pics/jumi-logo.png" alt="Jumi glowing">
+<p>Die Fähigkeit zu leuchten nennt man "Biolumineszenz" und 
+kommt bei vielen Lebewesen vor. Enzyme erzeugen Energie in 
+Form von Licht. Viele Fragen bleiben offen!</p>
 </article>
 <article class="content flow">
-  <h2>Themenfeld 3</h2>
-  <ul>
-    <li><b>Kategorie 1</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-    <li><b>Kategorie 2</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  </ul>
+<h3>Facebook war nicht Erster!</h3>
+<img src="content/pics/kwick.png" alt="Startseite von kwick.de">
+<p>MySpace, Friendster, Xing, LinkedIn und StudiVZ sind bekannt.<br>
+Aber alles unvergleichbar mit dem Hype von Kwick.de !</p>
 </article>
 <article class="content flow">
-  <h2>Themenfeld 4</h2>
-  <ul>
-    <li><b>Kategorie 1</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-    <li><b>Kategorie 2</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  </ul>
-</article>
-<article class="content flow">
-  <h2>Themenfeld 5</h2>
-  <ul>
-    <li><b>Kategorie 1</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-    <li><b>Kategorie 2</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  </ul>
+    <h3>Entschlossenheit...</h3>
+    <p>...kennt keine Furcht, nur Gewissheit!</p>
+    <br><span class="zitat-referenz">"Ich bin ein Yakuzza der alten Schule, wenn ich sterben muss, dann soll es geschehen" -Brother (2000)</span></p>
 </article>
 </div>
-
 </main>
+
 <footer>
 <!-- IMPRESSUM -->
 <span class="flex profil-links"><a id="githubIcon" href="https://github.com/xuser123" target="_blank"><img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;<a  id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank"><img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
