--- a/templates/Links.htm
+++ b/templates/Links.htm
@@ -60,73 +60,69 @@
 
 <div class="grid-container">
 <article class="content flow">
-  <h2>Themenfeld 1</h2>
-  <ul>
-    <li><b>Kategorie 1</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-    <li><b>Kategorie 2</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  </ul>
+<h4>Education</h4>
+<ul>
+<li><a href="https://www.theodinproject.com" target="_blank">TheOdinProject.com</a></li>
+<li><a href="https://www.freecodecamp.org" target="_blank">FreeCodeCamp.org</a></li>
+<li><a href="https://www.tryhackme.com" target="_blank">TryHackMe.com</a></li>
+<li><a href="https://media.ccc.de" target="_blank">media.ccc.de</a></li>
+</ul>
 </article>
 <article class="content flow">
-  <h2>Themenfeld 2</h2>
-  <ul>
-    <li><b>Kategorie 1</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-    <li><b>Kategorie 2</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  </ul>
+<h4>Et cetera</h4>
+<ul>
+<li><a href="https://www.virustotal.com/" target="_blank">Virus Total</a></li>
+<li><a href="https://codepen.io/pen/" target="_blank">CodePen</a></li>
+<li><a href="https://code.sgo.to/typograms/#related" target="_blank">Typogramme</a></li>
+</ul>
 </article>
 <article class="content flow">
-  <h2>Themenfeld 3</h2>
-  <ul>
-    <li><b>Kategorie 1</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-    <li><b>Kategorie 2</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  </ul>
+<h4>Künstliche Intelligenz</h4>
+<ul>
+<li><a href="https://you.com/" target="_blank">You.com</a></li>
+</ul>
 </article>
 <article class="content flow">
-  <h2>Themenfeld 4</h2>
-  <ul>
-    <li><b>Kategorie 1</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-    <li><b>Kategorie 2</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  </ul>
+<h4>Musik</h4>
+<ul>
+<li><a href="https://www.youtube.com/c/cryochamberlabel" target="_blank">Cryo Chamber</a></li>
+<li><a href="https://www.youtube.com/@VaporMemory" target="_blank">Vapor Memory</a></li>
+<li><a href="https://the80sguy.org/sub" target="_blank">The '80s Guy</a></li>
+<li><a href="https://8bit.fm/" target="_blank">8bit.fm</a></li>
+<li><a href="https://www.youtube.com/c/LofiGirl" target="_blank">Lofi Girl</a></li>
+</ul>
 </article>
 <article class="content flow">
-  <h2>Themenfeld 5</h2>
-  <ul>
-    <li><b>Kategorie 1</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-    <li><b>Kategorie 2</b></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  <li><a href="https://www.jumi.biz/Content">Thema <em>nicht vorhanden</em></a></li>
-  </ul>
+<h4>Youtube</h4>
+<ul>
+<li><a href="https://www.youtube.com/c/Algorithmenverstehen" target="_blank">Florian Dalwigk</a></li>
+<li><a href="https://www.youtube.com/user/TheMorpheus407/playlists" target="_blank">The Morpheus Tutorials</a></li>
+<li><a href="https://www.youtube.com/user/SemperVideo/videos" target="_blank">Semper Video</a></li>
+<li><a href="https://www.youtube.com/c/DistroTube" target="_blank">DistroTube</a></li>
+<li><a href="https://www.youtube.com/c/DavidBombal" target="_blank">David Bombal</a></li>
+<li><a href="https://www.youtube.com/user/EugeneKhutoryansky/videos" target="_blank">... 3D animated Education-Videos</a></li>
+<li><a href="https://www.youtube.com/c/BranchEducation/videos" target="_blank">Branch Education</a></li>
+<li><a href="https://www.youtube.com/c/DisruptReality" target="_blank">Disrupt</a></li>
+<li><a href="https://www.youtube.com/c/EFLinuxMadeSimple" target="_blank">EF Linux Made Simple</a></li>
+<li><a href="https://www.youtube.com/c/PowerCertAnimatedVideos" target="_blank">PowerCert Animated Videos</a></li>
+<li><a href="https://www.youtube.com/c/Fireshipx" target="_blank">Fireship</a></li>
+<li><a href="https://www.youtube.com/c/eHaJo" target="_blank">eHaJo</a></li>
+<li><a href="https://www.youtube.com/c/computerclubzwei" target="_blank">Computer Club 2</a></li>
+<li><a href="https://www.youtube.com/c/ChrisTitusTech" target="_blank">Chris Titus</a></li>
+<li><a href="https://www.youtube.com/c/LearnLinuxtv" target="_blank">Learn Linux TV</a></li>
+<li><a href="https://www.youtube.com/c/ct3003" target="_blank">ct3003</a></li>
+<li><a href="https://www.youtube.com/@KevinPowell" target="_blank">Kevin Powell</a></li>
+<li><a href="https://www.youtube.com/c/TheHatedOne" target="_blank">The Hated One</a></li>
+<li><a href="https://www.youtube.com/c/LiveOverflow" target="_blank">Live Overflow</a></li>
+<li><a href="https://www.youtube.com/c/hak5" target="_blank">hak5</a></li>
+<li><a href="https://www.youtube.com/c/ippsec" target="_blank">IppSec</a></li>
+<li><a href="https://www.youtube.com/@MentalOutlaw" target="_blank">Mental Outlaw</a></li>
+<li><a href="https://www.youtube.com/@PenAce" target="_blank">Pen Ace</a></li>
+</ul>
 </article>
 </div>
-
 </main>
+
 <footer>
 <!-- IMPRESSUM -->
 <span class="flex profil-links"><a id="githubIcon" href="https://github.com/xuser123" target="_blank"><img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;<a  id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank"><img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
